Bug with "Transfer: Edge Slide" with 2 edge loops selected #66802

Closed
opened 2019-07-12 19:44:48 +02:00 by Yash Pal Goyal · 9 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-11 13:50, hash: 06312c6d2d
Worked: (optional)

Short description of error
[Please fill out a short description of the error here]
On sliding the 2 particular selected edge loops, both loops move unexpectedly while "Show Transparency/X-Ray" is disabled.

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]

Based on:
[the attached "bug_report 2019_07_12 IST_23_00.blend" file and the auto-fetched system info]

Procedure:
1* Open the attached file (tested only on the mentioned PC+software configuration)
bug_report 2019_07_12 IST_23_00.blend
2* With cursor in either of the view, press 'g' twice or search for "Edge Slide" and select "Transfer: Edge Slide".
3* Move the cursor, and see the edge loops moving.
4* To come out of the Edge slide tool, press "Escape".
5* Repeat from step 2 with cursor in other view.

Observation:
In step 2, If the cursor was in:

  • the left hand view (X-ray/transparency disabled), both the edge loops move differently.
  • the right hand view (transparency enabled), both the loops move together as expected.
**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-11 13:50, hash: `06312c6d2d` Worked: (optional) **Short description of error** [Please fill out a short description of the error here] On sliding the 2 particular selected edge loops, both loops move unexpectedly while "Show Transparency/X-Ray" is disabled. **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] Based on: [the attached "bug_report 2019_07_12 IST_23_00.blend" file and the auto-fetched system info] Procedure: 1* Open the attached file (tested only on the mentioned PC+software configuration) [bug_report 2019_07_12 IST_23_00.blend](https://archive.blender.org/developer/F7603572/bug_report_2019_07_12_IST_23_00.blend) 2* With cursor in either of the view, press 'g' twice or search for "Edge Slide" and select "Transfer: Edge Slide". 3* Move the cursor, and see the edge loops moving. 4* To come out of the Edge slide tool, press "Escape". 5* Repeat from step 2 with cursor in other view. Observation: In step 2, If the cursor was in: * **the left hand view (X-ray/transparency disabled)**, both the edge loops move differently. * **the right hand view (transparency enabled)**, both the loops move together as expected.
Author

Added subscriber: @anonym

Added subscriber: @anonym

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Campbell Barton was assigned by Dalai Felinto 2019-07-13 01:22:30 +02:00

Confirmed indeed.

Confirmed indeed.

For the records, if I change the view angle a bit this works.

For the records, if I change the view angle a bit this works.
Author

I have never reported a bug before (for any project, ever), and I dont know if i should be or not, but I am a little bit excited that even after being such a newcomer to Blender and bug reporting in general, my report was understandable and not missing something. I was a little bit afraid to post it when I read the instructions saying to use latest "daily" build only.

Anyways, @dfelinto I would like to know, if possible, that what can cause a particular selection to behave differently? As far as I can guess, I think it is because the particular view angle and type is somehow being interpreted in a different context and then transformed accordingly. Can this be so, and is it so?

I have never reported a bug before (for any project, ever), and I dont know if i should be or not, but I am a little bit excited that even after being such a newcomer to Blender and bug reporting in general, my report was understandable and not missing something. I was a little bit afraid to post it when I read the instructions saying to use latest "daily" build only. Anyways, @dfelinto I would like to know, if possible, that what can cause a particular selection to behave differently? As far as I can guess, I think it is because the particular view angle and type is somehow being interpreted in a different context and then transformed accordingly. Can this be so, and is it so?

what can cause a particular selection to behave differently? As far as I can guess, I think it is because the particular view angle and type is somehow being interpreted in a different context and then transformed accordingly. Can this be so, and is it so?

Not sure, but based on mano-wii's patch the occluded geometry is handled differently than the non-occluded. So there is that.

> what can cause a particular selection to behave differently? As far as I can guess, I think it is because the particular view angle and type is somehow being interpreted in a different context and then transformed accordingly. Can this be so, and is it so? Not sure, but based on mano-wii's patch the occluded geometry is handled differently than the non-occluded. So there is that.
Campbell Barton was unassigned by Dalai Felinto 2019-12-23 16:33:48 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Germano Cavalcante self-assigned this 2020-02-04 13:54:06 +01:00

This issue was referenced by 00a0f06241

This issue was referenced by 00a0f062410a864e5592ed318ea4228c9dd2b589

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66802
No description provided.